// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user - get agency danish 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "agency": Object {
        "result": Array [
          Object {
            "name": "DBCTestBibliotek",
            "openingHours": "VIP 4.9: Åbningstider<br>
mandag<br>
tirsdag<br>
onsdag<br>
torsdag<br>
fredag<br>
lørdag",
          },
          Object {
            "name": "DBCtest_2",
            "openingHours": null,
          },
          Object {
            "name": "DBC-bibilioteksekspressen",
            "openingHours": null,
          },
        ],
      },
      "mail": "test@dbc.dk",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get agency english 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "agency": Object {
        "result": Array [
          Object {
            "name": "DBCTestBibliotek",
            "openingHours": "VIP 4.9: Åbningstider<br>
mandag<br>
tirsdag<br>
onsdag<br>
torsdag<br>
fredag<br>
lørdag",
          },
          Object {
            "name": "DBCtest_2",
            "openingHours": null,
          },
          Object {
            "name": "DBC-bibilioteksekspressen",
            "openingHours": null,
          },
        ],
      },
      "mail": "test@dbc.dk",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get basic data 1`] = `
Object {
  "data": Object {
    "user": Object {
      "address": "Borgmesterskoven 45",
      "country": "DK",
      "culrMail": "some@mail.com",
      "mail": "test@dbc.dk",
      "municipalityAgencyId": "715100",
      "name": "Freja Damgaard",
      "postalCode": "8660",
    },
  },
}
`;

exports[`user - get debt 1`] = `
Object {
  "data": Object {
    "user": Object {
      "debt": Array [
        Object {
          "amount": "224",
          "creator": null,
          "currency": "DKK",
          "date": 1969-12-31T23:00:00.000Z,
          "title": "",
        },
        Object {
          "amount": "50",
          "creator": null,
          "currency": "DKK",
          "date": 1969-12-31T23:00:00.000Z,
          "title": "",
        },
      ],
    },
  },
}
`;

exports[`user - get loans 1`] = `
Object {
  "data": Object {
    "user": Object {
      "loans": Array [
        Object {
          "agencyId": "790900",
          "dueDate": 2023-07-31T22:00:00.000Z,
          "edition": "2. udgave",
          "loanId": "5301555018",
          "manifestation": null,
          "materialType": "Bog",
          "pages": "299 sider",
          "publisher": "Voice & Writing 2019",
        },
        Object {
          "agencyId": "790900",
          "dueDate": 2023-08-10T22:00:00.000Z,
          "edition": "1. udgave",
          "loanId": "5085535759",
          "manifestation": null,
          "materialType": "Bog",
          "pages": "159 sider",
          "publisher": "People's Press 2018",
        },
      ],
    },
  },
}
`;

exports[`user - get orders 1`] = `
Object {
  "data": Object {
    "user": Object {
      "orders": Array [
        Object {
          "agencyId": "790900",
          "creator": "Thorborg, Martin",
          "edition": "1. udgave",
          "holdQueuePosition": "1",
          "orderDate": 2023-06-27T13:42:35.000Z,
          "orderId": "79182543",
          "orderType": "normal",
          "pages": "151 sider",
          "pickUpBranch": Object {
            "agencyName": "Øen",
          },
          "pickUpExpiryDate": null,
          "status": "UNKNOWN",
          "title": "Skab din egen succes: leveregler der kan bringe dig langt",
        },
      ],
    },
  },
}
`;
